# django-revolution

./: .gitignore  .prettierignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  package.json
django_revolution/: .gitignore  LICENSE  README.md  publish_cli.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.py
django_revolution/@docs/: ARCHITECTURE.md  INSTALLATION.md
django_revolution/django_revolution/: MANIFEST.in  README.md  __init__.py  app_config.py  apps.py  cli.py  config.py  drf_config.py  run_generation.sh  urls_integration.py  utils.py  version_config.py  zones.py
django_revolution/django_revolution/@docs/: API_REFERENCE.md  README.md  USAGE.md
django_revolution/django_revolution/django_revolution/: __init__.py  app_config.py  config.py  urls_integration.py  utils.py
django_revolution/django_revolution/django_revolution/management/: __init__.py
django_revolution/django_revolution/django_revolution/management/commands/: revolution.py
django_revolution/django_revolution/django_revolution/openapi/: archive_manager.py  python_client.py
django_revolution/django_revolution/django_revolution/zones/: admin_urls.py  client_urls.py  encar_private_urls.py  private_urls.py  public_urls.py
django_revolution/django_revolution/django_sample/apps/private_api/: apps.py  models.py  (+3 more)
django_revolution/django_revolution/management/commands/: __init__.py  revolution.py
django_revolution/django_revolution/openapi/: __init__.py  archive_manager.py  generator.py  heyapi_ts.py  monorepo_sync.py  python_client.py  utils.py
django_revolution/django_revolution/openapi/templates/: __init__.py.j2  index.ts.j2  index_consolidated.ts.j2  package.json.j2
django_revolution/django_revolution/zones/: __init__.py  encar_public_urls.py  internal_urls.py  private_urls.py  public_urls.py
django_revolution/django_sample/: README.md  settings.py  teststest_real_generation.py  urls.py  wsgi.py
django_revolution/django_sample/apps/: __init__.py
django_revolution/django_sample/apps/public_api/: apps.py  urls.py
django_revolution/docs/django_revolution/: DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  README.md  TROUBLESHOOTING.md  installation.md  requirements.txt
django_revolution/scripts/: README.md  __init__.py  dev_cli.py  generate_requirements.py  publisher.py  test_generation.sh  version_manager.py
django_revolution/tests/: README.md  conftest.py  django_init.py  pytest.ini  test_config.py  test_integration.py  test_management.py  test_multithreading.py  test_settings.py  test_simple.py  test_zones.py
django_sample/: .gitignore  ENV_SETUP.md  README.md  README_ENV.md  __init__.py  docker-compose.yaml  manage.py  package.json  pyproject.toml  settings.py  urls.py  wsgi.py
django_sample/apps/core/: __init__.py
django_sample/apps/private_api/: __init__.py  admin.py  apps.py  urls.py  views.py
django_sample/apps/private_api/migrations/: 0001_initial.py
django_sample/apps/public_api/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django_sample/apps/public_api/migrations/: 0001_initial.py  0002_alter_post_author.py  0003_remove_user_model.py
django_sample/apps/trading_signals/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django_sample/apps/trading_signals/migrations/: 0001_initial.py  0002_alter_channel_options_alter_message_options_and_more.py  0003_channel_description_signal_raw_json_and_more.py  0004_remove_channel_description_remove_signal_raw_json_and_more.py  0005_channel_allow_signals_without_sl_tp_channel_fails_and_more.py
django_sample/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
django_sample/apps/users/migrations/: 0001_initial.py
(+145 files in other folders)
