[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-revolution"
version = "1.0.8"
description = "Zone-based API architecture for Django. Install and go."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Unrealos", email = "developers@unrealos.com"},
]
maintainers = [
    {name = "Unrealos", email = "developers@unrealos.com"},
]
keywords = ["django", "api", "openapi", "rest", "zones", "typescript", "python", "client", "generation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=3.2",
    "djangorestframework>=3.12.0",
    "drf-spectacular>=0.24.0",
    "Jinja2>=3.0.0",
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "datamodel-code-generator>=0.31.0",
    "django-filter>=22.0.0",
    "djangorestframework-simplejwt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django>=4.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "build>=1.0.0",
    "twine>=4.0.0",
    "questionary>=2.0.0",
]

[project.urls]
"Homepage" = "https://unrealos.com"
"Repository" = "https://github.com/markolofsen/django-revolution"
"Documentation" = "https://markolofsen.github.io/django-revolution/"

[project.scripts]
django-revolution = "django_revolution.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_revolution*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
django_revolution = ["openapi/templates/*.j2", "openapi/templates/**/*.j2", "**/*.j2"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "1.0.8"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
twine = "^6.1.0"

